# brain-need-eat-snn

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  constants.h  main.cpp  matplotlibcpp.h
classes/: Brain.cpp  Brain.h  Drawer.h  Neuron.h  NeuronConnection.h  NeuronController.cpp  NeuronController.h  Signal.h  Tick.h  Ticker.cpp  Ticker.h
classes/factories/: BrainFactory.cpp  BrainFactory.h  NeuronControllerFactory.cpp  NeuronControllerFactory.h  NeuronFactory.cpp  NeuronFactory.h
classes/neurons/: ExcitatoryNeuron.h  InhibitoryNeuron.h
classes/repositories/: NeuronConrollerRepository.h  NeuronRepository.h
tests/: CMakeLists.txt
tests/basic_tests/: BasicTest.cpp  CMakeLists.txt  NeuronConnectionTest.cpp  NeuronFactoryTest.cpp  NeuronRepositoryTest.cpp  TickerTest.cpp
